assets/styles/titlelogo.scss
// custom title tile with logo image
@use "./variables.scss" as *;

body .page-title {
  width: 100%;
}
@media all and ($mobile) {
  body .page-title {
    display: block;
    text-align: left;
    width: 100%;
    order: -1;
  }
  body .page-title > A::before {
    display: inline-block;
    margin: 0% 4%;
    padding: 3% 10%;
    border-radius: 8px;
    background-image: url(static/nth-loop-fractal-tree.png);
    background-position: 50% 20%;
    background-repeat: no-repeat;
    box-shadow: 0px 0px 8px 2px #0009 inset;
    content: "logo";
    color: transparent;
    font-size: inherit;
  }
}
@media all and not ($mobile) {
  body .page-title {
    display: block;
    text-align: right;
  }
  body .page-title > A::after {
    display: block;
    height: 356px;
    margin: 4% 0%;
    border-radius: 12px;
    background-image: url(static/nth-loop-fractal-tree.png);
    background-position: center;
    background-repeat: no-repeat;
    box-shadow: 0px 0px 12px 4px #0009 inset;
    content: "logo";
    color: transparent;
    font-size: 0;
  }
}

// on mobile, rearrange in two rows
// first title; second explorer menu and search box
@media all and ($mobile) {
  .page > div#quartz-body div.sidebar.left {
    gap: 0.5rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    & div {
      order: 1;
    }
  }
  .search {
    flex-grow: 1;
    max-width: 24rem;
  }
  .explorer {
    order: 0;
  }
  .explorer-content {
    top: auto;
    margin-top: -10px;
  }
}

